k8-manifests/qa/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: akashodedara/devsecops:e4e88a2d25d7b5d7d9f5e041a5fff0e600a9c751
        ports:
        - containerPort: 5000
